static/css/theme.less
/* ... */
/*-- reporting --------------------------------------------------*/
body.reporting                               {
    #masthead                                {display: none;
    }

    #content.vocabulary                      {background-color: @pallette1;

      h2                                     {font-family: 'Amatic SC';
                                              font-size: 2.5em;
                                              color: darken(@pallette1, 50%);
                                              margin-bottom: 21px;
                                              margin-top: 21px;
      }
      .row.vocab-instructions                {padding-top: 1em;
                                              padding-bottom: 1em;
      }
      .row.vocab-controls                    {background-color: @pallette3;
                                              padding-top: 1em;
        #vocab_scope_form                    {width: 360px;
            .form-group                      {margin-left:0;
            }
        }
      }
      .row.vocab-list                        {background-color: @accent2;
                                              padding-top: 2em;
                                              padding-bottom: 3em;
                                              color: lighten(@accent2, 50%);
                                              .bluetable;
        #search_instructions_btn             {position:absolute;
                                              right:1em;
                                              z-index: 999;
                                              cursor: pointer;
                                              color: #fff;
        }
        #vocab-table_wrapper                 {
          .row:first-child                   {padding-bottom: 1em;
          }

        }
      }
    }
    .popover p                       {text-align: left;
    }
}

/*-- listing --------------------------------------------------*/
body.listing                        {
    #masthead                       {display: none;
    }

}


/*-- classlists --------------------------------------------------*/
body.user                           {
    #masthead                       {display: none;
    }
    #class-chooser-form             {margin-top: 1em;
    }
    #add_members_trigger            {position: absolute;
                                     right: 0;
                                     top: 5em;
    }
    .table-condensed                {
        tbody                       {
        tr                          {
            td, th                  {white-space: pre-wrap; // css3
                                     white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
                                     white-space: -pre-wrap; /* Opera 4-6 */
                                     white-space: -o-pre-wrap; /* Opera 7 */
                                     word-wrap: break-word; // IE 5.5+
                                     border-right: 0px transparent;
                                     vertical-align: middle;
                &.rank              {background-color: @success-bg;
                }
                &.term-prog         {background-color: @warning-bg;
                }
                &.grade             {background-color: @warning-bg;
                }
                &.week-counts-0     {background-color: #efefef;
                }
                &.week-counts-1     {background-color: #dedede;
                                     border-top: 1px solid #ccc;
                }
                &.error             {color: red;
                }
                &.button_column     {width: 110px;
                                     min-width: 110px;
                }
            }
        th                          {vertical-align: top;
        }

        }
        }
    }
}
/* ... */

